Z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,11 +199,11 @@ p{
 }
 
 canvas{
-  z-index: -2 !important;
+  /* z-index: -2 !important; */
   position: relative;
 }
 
 video{
-  z-index: -1;
+  /* z-index: -1; */
   position: relative;
 }
